<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Custom.FormLayout"
    tools:context=".auth.LoginActivity">

    <TextView
        style="@style/Custom.FormLabel"
        android:text="@string/auth_login_title"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout style="@style/Custom.FormInput">

        <EditText
            android:id="@+id/auth_email"
            style="@style/Custom.TextInput"
            android:autofillHints="emailAddress"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Custom.FormInput"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/auth_pass"
            style="@style/Custom.TextInput"
            android:autofillHints="password"
            android:hint="@string/auth_pass_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/auth_login"
        style="@style/Custom.FormLabel"
        android:backgroundTint="@color/accent"
        android:text="@string/auth_login_action" />

    <TextView
        android:id="@+id/auth_signup"
        style="@style/Custom.FormLabel"
        android:text="@string/auth_signup_call"
        android:textStyle="bold" />
</LinearLayout>